Added home page and multiple colour functionality

--- a/Paint.html
+++ b/Paint.html
@@ -5,6 +5,19 @@
     </head>
     <body>
         <main>
+            <div id="Start">
+                <h1>JAVASCRIPT PAINT</h1>
+                <h2>Welcome to Paint</h2>
+                <p>Let your craetivity loose and go wild</p>
+                <button type="button" value="PAINT" onclick="start()"></button>
+            </div>
+            <div id="panel">
+                <button type="button" value="R" onclick="panel(0)"></button>
+                <button type="button" value="G" onclick="panel(1)"></button>
+                <button type="button" value="B" onclick="panel(2)"></button>
+                <button type="button" value="B" onclick="panel(3)"></button>
+                <button type="button" value="Y" onclick="panel(4)"></button>
+            </div>
             <canvas id="canvas"></canvas>
         </main>
         <script src="Paint.js"></script>
